wacc/test/golden/syntaxErr.if.ifNofi
# if missing closing fi

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  then
    skip
  else
    skip
end


(line 17, column 1):
  unexpected "en"
  expected ";", end of skip, or fi
  >    skip
  >end
   ^^
  >